# sled-entity

./: Cargo.toml  Readme.md
reindeer/: Cargo.toml
reindeer-core/: Cargo.toml
reindeer-core/src/test/: test_entities.rs
reindeer-macros/: Cargo.toml
reindeer-macros/src/: attr.rs  entity_data.rs  lib.rs  relations.rs  schema.rs  structure.rs
reindeer/src/: entity.rs  import_export.rs  lib.rs  query_builder.rs
reindeer/src/relation/: mod.rs
reindeer/src/test/: mod.rs  test_entities.rs
reindeer/src/tests/: mod.rs
src/: entity.rs  import_export.rs  lib.rs  query_builder.rs
src/relation/: descriptor.rs  mod.rs
src/test/: mod.rs  test_entities.rs
