[package]
name = "reindeer-macros"
edition = "2021"
version.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.51"
quote = "1.0.23"
serde = { version = "^1", features = [ "derive" ]}
serde_json = "^1"
syn = { version = "1.0.109", features=["derive","parsing"]}
toml = "0.7.2"

[dev-dependencies]
trybuild = { version = "1.0.78", features = ["diff"] }
