[package]
name = "reindeer"
edition = "2021"
version.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sled = "0.34.7"
serde = "1"
serde_derive = "1"
serde_json = "1"
bincode = "1.3.3"
paste = "1.0"
hashers = "1"

[dev-dependencies]
uuid = { version = "1.1.2", features = ["fast-rng", "v4"] }